Ensure that if preview is enabled, javaCompiler == target